--- a/src/components/PostsCreator/PostCreator.module.css
+++ b/src/components/PostsCreator/PostCreator.module.css
@@ -2,23 +2,25 @@
   display: flex;
   flex-direction: column;
 
-  width: 400px;
+  width: 25rem;
 }
 
 .submitBtn {
   cursor: pointer;
 
-  width: 90px;
-  margin: 5px;
+  width: 9rem;
+  height: 2rem;
+  margin: 1rem;
 
   font-weight: 600;
-  font-size: 12px;
+  font-size: 1rem;
 
-  background-color: lightgreen;
+  background-color: blue;
+  color: white;
   border-color: darkcyan;
-  border-radius: 10px;
 }
 
-.formInput {
-  width: 200px;
+.textField {
+  width: 25rem;
+  resize: vertical;
 }
